src/cli/snapshots/anycli__cli__tests__snapshot_tests__command_corrections.snap
---
source: src/cli/tests.rs
assertion_line: 77
expression: all_corrections
---
- query: show clusters
  correct_command: ibmcloud ks clusters
  error_pattern: ~
  timestamp: "[timestamp]"
- query: list databases
  correct_command: ibmcloud resource service-instances --service-name databases-for-postgresql
  error_pattern: Plugin missing error
  timestamp: "[timestamp]"
