src/cli/snapshots/anycli__cli__tests__snapshot_tests__quality_analysis_empty_command.snap
---
source: src/cli/tests.rs
assertion_line: 27
expression: analysis
---
score: 0.15
issues:
  - "Command does not start with 'ibmcloud'"
  - Command is empty
  - Command spans multiple lines
suggestions:
  - "Ensure the command starts with 'ibmcloud'"
  - Command may not follow common IBM Cloud CLI patterns
  - Use a single-line command
