src/cli/snapshots/anycli__cli__tests__snapshot_tests__quality_analysis_error_command.snap
---
source: src/cli/tests.rs
assertion_line: 27
expression: analysis
---
score: 0.35000002
issues:
  - "Command does not start with 'ibmcloud'"
  - Command contains error indicators
suggestions:
  - "Ensure the command starts with 'ibmcloud'"
  - Command may not follow common IBM Cloud CLI patterns
