src/cli/snapshots/anycli__cli__tests__snapshot_tests__quality_analysis_incomplete_command.snap
---
source: src/cli/tests.rs
assertion_line: 27
expression: analysis
---
score: 0.6
issues:
  - Command is too short
suggestions:
  - Command may not follow common IBM Cloud CLI patterns
