src/cli/snapshots/anycli__cli__tests__snapshot_tests__quality_analysis_login_sso_command.snap
---
source: src/cli/tests.rs
assertion_line: 27
expression: analysis
---
score: 1
issues: []
suggestions: []
