src/cli/snapshots/anycli__cli__tests__snapshot_tests__quality_validations.snap
---
source: src/cli/tests.rs
assertion_line: 47
expression: results
---
- - ibmcloud resource groups
  - true
- - ibmcloud login
  - true
- - error
  - false
- - ""
  - false
